# memex-modal-photobooth

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  doc.md  feature.md  question.md
.github/workflows/: ci.yaml
app/: _modal.py  main.py  middlewares.py  router.py  settings.py
app/health/: router.py
app/kit/: sqlite.py
app/kit/models/: __init__.py  base.py
app/models/: __init__.py
app/photobooth/: router.py  schemas.py  service.py
migrations/: env.py
templates/: photobooth_home.html
tests/fixtures/: base.py
tests/health/: test_health_router.py
